<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>root</groupId>
   <version>1.1</version>
   <artifactId>project</artifactId>
   <packaging>pom</packaging>
   <name>project</name>
   <properties>
   		<sun.tools.location>C:\Program Files\Java\jdk1.8.0_91\lib\tools.jar</sun.tools.location>
   </properties>
   <modules>
      <module>projects</module>
      <module>primary-source</module>
      <module>ejbClient</module>
      <module>ejbs</module>
      <module>gui</module>
	  <module>mvcgui</module>
      <module>ear</module>
      <module>verzuimweb</module>
	  <module>JasperReports</module>
<!--
      <module>reports</module>
      <module>utils</module>
-->
   </modules>
   <build>
      <pluginManagement>
         <plugins>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-site-plugin</artifactId>
		       <version>3.1</version>
               <configuration>
                  <unzipCommand>/usr/bin/unzip -o > err.txt</unzipCommand>
               </configuration>
            </plugin>
         </plugins>
      </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>
	  <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-surefire-plugin</artifactId>
		<version>2.18</version>
		<configuration>
			<argLine>-Xmx2048m -XX:MaxPermSize=128m</argLine>
		</configuration>
	  </plugin>
    </plugins>
      
   </build>
   <dependencyManagement>
      <dependencies>
         <dependency>
            <groupId>root.project.projects</groupId>
            <artifactId>logging</artifactId>
            <version>1.1</version>
         </dependency>
         <dependency>
            <groupId>root.project</groupId>
            <artifactId>primary-source</artifactId>
            <version>1.1</version>
         </dependency>
         <dependency>
            <groupId>root.project</groupId>
            <artifactId>ejbs</artifactId>
            <version>1.1</version>
            <type>ejb</type>
         </dependency>
         <dependency>
         	<groupId>root.project</groupId>
         	<artifactId>ejbClient</artifactId>
         	<version>1.1</version>
         </dependency>
         <dependency>
         	<groupId>verzuimweb</groupId>
         	<artifactId>verzuimweb</artifactId>
         	<version>1.1</version>
         	<type>war</type>
         </dependency>
         <dependency>
         	<groupId>root.project</groupId>
         	<artifactId>utils</artifactId>
         	<version>1.1</version>
         </dependency>
      </dependencies>
   </dependencyManagement>
   <distributionManagement>
      <site>
         <id>site</id>
         <name>project website</name>
         <url>scp://local.company.com/websites/project.company.com/</url>
      </site>
   </distributionManagement>
</project>
